Finished styling media queries and fixed wonky spacing. Avatar is finished.

--- a/assets/style.css
+++ b/assets/style.css
@@ -264,7 +264,7 @@ a:link{
     }
 
     .heading{
-        font-size: 3em;
+        font-size: 2.5em;
     }
 
     .contact-item{
